alignment-issue-different-browsers

--- a/resources/assets/sass/common.scss
+++ b/resources/assets/sass/common.scss
@@ -1530,7 +1530,7 @@
           @extend %bold-font;
           font-size: 15px;
           display:inline;
-          margin-left:160px;
+          margin-left:150px;
           color: $blue;
           &:hover{
             border-bottom: solid 1px $blue;
@@ -2180,9 +2180,9 @@
       z-index: 1000;
       left: 50%;
       transform: translate(-50%, -16%);
-      padding: 98px 0;
+      padding: 90px 0;
       width: 100%;
-      height: 90%;
+      height: 75%;
       overflow-y: auto;
       background-color: $white;
       border-top: 1px solid $blue;
