--- a/resources/assets/sass/global.scss
+++ b/resources/assets/sass/global.scss
@@ -539,6 +539,7 @@
         }
         .text{
           padding-left: 30px;
+          display: inline-block;
         }
       }
       input:checked ~ label{
@@ -571,6 +572,7 @@
             margin-right: 10px;
             border: 1px solid $border;
             display: inline-block;
+            display: -moz-inline-stack;
             vertical-align: middle;
             transition: all 1s ease;
             position: absolute;
@@ -588,6 +590,7 @@
         }
         .text{
           padding-left: 30px;
+          display: inline-block;
         }
       }
       input:checked ~ label{
